Fixed connection image and alignment

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1291,6 +1291,9 @@ h2.form-title {
         margin-top: 20px;
         margin-bottom: 20px; }
       .cityChatContainer .sidebarWrapper .chatSidebar .chatConnectionsContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-bottom: 5px; }
         .cityChatContainer .sidebarWrapper .chatSidebar .chatConnectionsContainer .connectionImage {
           height: 50px;
