--- a/client/src/scss/chatPage.scss
+++ b/client/src/scss/chatPage.scss
@@ -16,6 +16,9 @@
           margin-bottom: 20px;
         }
       .chatConnectionsContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-bottom: 5px;
         .connectionImage {
           height: 50px;
